--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rusqlite = "0.26.0"
+urlencoding = "1.3.3"
